Changed to not include Deque